# docs/swagger.yaml
@@ -1483,13 +1483,21 @@ paths:
       summary: Get the next public submission
       tags:
       - Round
-  /round/{roundId}/results:
+  /round/{roundId}/results/{format}:
     get:
       description: Get results of a round
       parameters:
       - description: The round ID
         in: path
         name: roundId
+        required: true
+        type: string
+      - description: The format of the results
+        enum:
+        - CSV
+        - JSON
+        in: path
+        name: format
         required: true
         type: string
       - in: query
@@ -1515,6 +1523,7 @@ paths:
         type: array
       produces:
       - application/json
+      - application/csv
       responses:
         "200":
           description: OK
